ddns/test-https-ingress.yaml
# HTTPS 인증서 발급 테스트용 리소스
# 간단한 nginx pod + service + ingress로 Let's Encrypt 인증서 발급 확인
#
# 적용: kubectl apply -f test-https-ingress.yaml
# 삭제: kubectl delete -f test-https-ingress.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-https
  namespace: default
  labels:
    app: test-https
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-https-svc
  namespace: default
spec:
  selector:
    app: test-https
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-https-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - ezenitac.duckdns.org
  rules:
    - host: ezenitac.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-https-svc
                port:
                  number: 80
